# pluma

./: .dockerignore  .gitignore  Dockerfile.api  README.md  pyproject.toml
examples/cross_pluma/: README.md  report.md
examples/cross_pluma/inputs/: dropoff_data.json  funnel.yaml  integration_cohort.yaml  traces.jsonl
examples/stripe/: README.md
examples/stripe/inputs/: PHASE_1_NOTES.md  PHASE_2_NOTES.md  PHASE_2_RESEARCH.md  dropoff_data.json  funnel.yaml  integration_cohort.yaml  traces.jsonl
examples/stripe/inputs/product/: errors.md  openapi.yaml
examples/stripe/outputs/: cross.md  funnel_diagnosis.md  integration_findings.md  rerun_post_loader_fix.md  triage.md
fixtures/: pluma_api
fixtures/pluma_api/: README.md
fixtures/pluma_api/docs/: agents.md  errors.md  quickstart.md
fixtures/pluma_api/sdk/: agents.py
src/pluma/: __main__.py  cache.py  comparison.py  cross.py  normalize.py  router.py  runners.py
src/pluma/api/: __init__.py  __main__.py  auth.py  job_store.py  models.py  openapi.yaml  server.py  worker.py
src/pluma/integrations/: __init__.py
src/pluma/integrations/agent-instructions/: AGENTS.md.template  AGENT_RESEARCHER.md  FUNNEL_RESEARCHER.md  PLUMA_CROSS.md  (+2 more)
templates/github-action/: README.md  pluma-diagnose.yml
tests/: test_braintrust_converter.py  test_cache.py  test_cli.py  test_cli_braintrust_dispatch.py  test_cross.py  test_langsmith_converter.py  test_normalize.py  test_otel_converter.py  test_router.py  test_runners.py  test_schema_internal_consistency.py
tests/test_api/: test_job_store.py  test_server.py  test_worker.py
(+44 files in other folders)
